# dedisbenchv2

./: .gitignore  DEDISbench.c  DEDISgen.c  Makefile.am  configure.ac
alex/: apontamentos.txt  erros.txt  objetivos.txt  pensamentos.txt  resultados_speed.txt  reuniao2_05.txt
benchcore/: io.c  io.h
benchcore/accesses/: iodist.c
benchcore/duplicates/: duplicatedist.c  duplicatedist.h
benchcore/integrity/: integrity.c  integrity.h
benchcore/sharedmem/: sharedmem.c  sharedmem.h
conf/: 1-models.txt  2-sqlite.txt  3-kernels.txt  4-geo.txt  config++.ini  dataset1  dataset1_hotspot_1_w  dataset1_hotspot_4_w  dataset1_sequencial_1_r  dataset1_sequencial_1_w  dataset1_sequencial_4_r  dataset1_sequencial_4_w  dataset1_uniform_1_w  dataset1_uniform_4_r  dataset1_uniform_4_w  dataset2  dataset2_hotspot_1_w  dataset2_hotspot_4_r  dataset2_hotspot_4_w  dataset2_sequencial_1_r  dataset2_sequencial_1_w  dataset2_sequencial_4_r  dataset2_sequencial_4_w  dataset2_uniform_1_r  dataset2_uniform_4_w  defconf.ini
libGenerator/: Makefile.am  generator.cpp  generator.h  generatorW.cpp  generatorW.h
populate/: populate.c  populate.h
populate/.deps/: DEDISbench-populate.Po
structs/: defines.h  structs.h
testing/: test.c  test.h
